<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addtask.AddTaskActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/add_task_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_add_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_task_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:paddingBottom="16dp" />

            <EditText
                android:id="@+id/edit_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_title"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/edit_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/edit_task_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_due_date"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/text_priority_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_priority"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/spinner_task_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/button_cancel_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel" />

                <Button
                    android:id="@+id/button_save_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:layout_marginStart="16dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

